# watchcat

./: .autogui.json  .gitignore  .windsurfrules  404.html  LICENSE  README.md  WatchCat.spec  build.py  default_config.json  index.html  main.spec  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test_notification.py  version.txt  watchcat.md  watchcat.spec
.github/workflows/: deploy-docs.yml  release.yml
changelog/: index.html
development/contributing/: index.html
development/distribution/: index.html
development/setup/: index.html
development/uiux/: index.html
docs/: changelog.md  faq.md  getting-started.md  index.md
docs/api/: automation.md  qt-interface.md
docs/development/: contributing.md  distribution.md  setup.md  uiux.md
docs/guide/: advanced.md  basic-usage.md  installation.md
faq/: index.html
getting-started/: index.html
guide/basic-usage/: index.html
guide/installation/: index.html
prompts/: wechat.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/automation/: index.html
site/api/qt-interface/: index.html
site/changelog/: index.html
site/development/contributing/: index.html
site/development/setup/: index.html
site/faq/: index.html
site/getting-started/: index.html
site/guide/advanced/: index.html
site/guide/basic-usage/: index.html
site/guide/installation/: index.html
site/search/: search_index.json
src/: ImageMatchThread.py  TransparentOverlay.py  config.py  geometry_manager.py  image_manager.py  main.py  sounds.py  tray.py  window_painter.py
tests/: test_overlay.py
transparent_overlay/: ImageMatchThread.py  TransparentOverlay.py  config.py  geometry_manager.py  image_manager.py  log.py  main.py  platform_window.py  signal_manager.py  sounds.py  tray.py  window_painter.py
