[tool.poetry]
name = "watchcat"
version = "0.1.0"
description = "A transparent overlay window application for desktop automation"
authors = ["mark <mark@cs-magic.com>"]
packages = [{include = "transparent_overlay"}]
license = "MIT"
repository = "https://github.com/cs-magic-open/watchcat"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PyQt6 = "^6.4.0"
opencv-python = "^4.8.0"
numpy = "^1.26.0"
mss = "^9.0.1"
pyobjc-framework-cocoa = "^10.3.2"
pyobjc-framework-quartz = "^10.3.2"
pyobjc-framework-applicationservices = "^10.3.2"
pyobjc-framework-coretext = "^10.3.2"
plyer = "^2.1.0"
notify-py = "^0.3.43"
simpleaudio = "^1.0.4"
pydub = "^0.25.1"
pydantic = "^2.10.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
briefcase = "^0.3.20"
py2app = "^0.28.8"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.briefcase]
project_name = "WatchCat"
bundle = "com.cs-magic.watchcat"
version = "0.1.0"
url = "https://github.com/cs-magic-open/watchcat"
author = "mark"
author_email = "mark@cs-magic.com"
license = "MIT"

[tool.briefcase.app.transparent_overlay]
formal_name = "WatchCat"
description = "A transparent overlay window application for desktop automation"
icon = "resources/icon"
sources = ["transparent_overlay"]
requires = []

[tool.briefcase.app.transparent_overlay.macOS]
requires = []
universal_build = true
supported = true
minimum_os_version = "10.15"